# Nexus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml
apps/desktop/: package-lock.json  package.json
apps/macos/: .gitignore  ARCHITECTURE.md  Package.swift
capabilities/data_analysis/: CAPABILITY.yaml
capabilities/database_access/: CAPABILITY.yaml
capabilities/excel_processing/: CAPABILITY.yaml
capabilities/image_processing/: CAPABILITY.yaml
capabilities/pdf_processing/: CAPABILITY.yaml
capabilities/web_scraping/: CAPABILITY.yaml
config/: app.yaml.example  scheduler.yaml
config/node_cards/: hub-server.example.yaml  iphone.example.yaml  macbook-edge.example.yaml  macbook-pro.example.yaml
config/prompts/: system_prompt.md
deploy/amqtt/: broker.yaml
deploy/mosquitto/: mosquitto.conf
deploy/nginx/: nexus.conf
deploy/systemd/: nexus-api.service  nexus-web.service
docs/: ASYNC_TASK_ARCHITECTURE.md  NEXUS_MESH_ARCHITECTURE.md
nexus/: __init__.py  __main__.py  orchestrator.py
nexus/agent/: __init__.py  approval.py  attempt.py  background.py  compressor.py  context.py  core.py  heartbeat.py  run.py  run_store.py  sandbox.py  session_manager.py  streaming.py  subagent.py  subagent_registry.py  system_run.py  task_dag.py  todo.py  tool_loop_detection.py  tool_profiles.py  tool_registry.py  tools_policy.py  transcript.py  transcript_store.py  types.py
nexus/api/: __init__.py  (+4 more)
scripts/: bootstrap_medical_kb_vault.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+233 files in other folders)
